Minor improvements and bug fixes (#191)
* Place 'include after' block after body

* Add scrollbar to long TOC

* Replace deprecated '--no-wrap' option

* Allow wrapping option to be set in yaml header

--- a/inst/rmarkdown/templates/simple/skeleton/css/simple.css
+++ b/inst/rmarkdown/templates/simple/skeleton/css/simple.css
@@ -55,6 +55,7 @@ pre code {
 #toc {
   position: fixed;
   overflow-y: auto;
+  max-height: 85vh;
 }
 
 /*
@@ -67,6 +68,7 @@ pre code {
 /* By default it's not affixed in mobile views, so undo that */
 .sidebar.affix {
   position: static;
+  height: 90vh;
 }
 
 /* First level of nav */
